# audiodiary-web

./: amplify.yml  apprunner.yaml  next.config.ts  package-lock.json  package.json
.cursor/rules/: cursor-rules.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: deploy-backend.yml
amplify/: team-provider-info.json
backend/: .env.example.local  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
backend-py/: README.md  pyproject.toml
backend-py/app/: main.py
backend-py/app/services/: gemini_service.py
backend/app/: main.py
backend/app/api/v1/: chat.py  schemas.py  stt.py  tts.py
backend/app/services/: openai_service.py
frontend/: .env.example.local  amplify.yml
frontend-ts/: .gitignore  amplify.yml  next.config.ts  package-lock.json  package.json
frontend-ts/.next/: app-build-manifest.json
frontend-ts/.next/cache/: .rscinfo
frontend-ts/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend-ts/amplify/backend/: backend-config.json
frontend-ts/src/app/: globals.css  page.tsx
frontend-ts/src/components/: ConditionalLayout.tsx  clientThemeProvider.tsx
frontend-ts/src/utils/: api.ts  auth.ts  schemas.tsx
frontend/amplify/: team-provider-info.json
frontend/amplify/.config/: project-config.json
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CalendarPanel.tsx  ChatPanel.tsx  ConditionalLayout.tsx  Sidebar.tsx  authGuard.tsx  clientThemeProvider.tsx
src/utils/: api.ts  auth.ts  googleCalendar.ts  schemas.tsx
(+121 files in other folders)
